--- a/packages/blogpress/weekly/2023-11-12.md
+++ b/packages/blogpress/weekly/2023-11-12.md
@@ -57,7 +57,7 @@ caravaggio
 
 使用也非常简单，在服务后拼参数即可
 ```sh
-http://localhost:8565/rotate,v:90/o:png/?image=https://sugarat.top/logo.png
+http://localhost:8565/rotate,v:90/o:png/?image=https://devzx.top/logo.png
 ```
 
 ![](https://img.cdn.sugarat.top/mdImg/MTY5OTc5MzIxMjY1MA==699793212650)
@@ -94,7 +94,7 @@ http://localhost:8565/rotate,v:90/o:png/?image=https://sugarat.top/logo.png
 
 ---
 
-篇幅有限，如果你还没看够，可移步后面的推荐渠道，继续游览，历史周刊（<20）[移步博客](https://sugarat.top/weekly/index.html)
+篇幅有限，如果你还没看够，可移步后面的推荐渠道，继续游览，历史周刊（<20）[移步博客](https://devzx.top/weekly/index.html)
 
 ## ⭐️强力推荐关注
 * [阮一峰: 科技爱好者周刊](https://www.ruanyifeng.com/blog/archives.html) - 记录每周值得分享的科技内容，周五发布
