--- a/packages/blogpress/weekly/2024-05-12.md
+++ b/packages/blogpress/weekly/2024-05-12.md
@@ -126,7 +126,7 @@ Arc 浏览器 Windows 版本可以下载使用了，目前仅支持 Win11。
 
 ---
 
-篇幅有限，如果你还没看够，可移步后面的推荐渠道，继续游览，历史周刊（<20）[移步博客](https://sugarat.top/weekly/index.html)
+篇幅有限，如果你还没看够，可移步后面的推荐渠道，继续游览，历史周刊（<20）[移步博客](https://devzx.top/weekly/index.html)
 
 ## ⭐️强力推荐关注
 
