--- a/packages/blogpress/weekly/2024-08-25.md
+++ b/packages/blogpress/weekly/2024-08-25.md
@@ -63,7 +63,7 @@ search(source, 'oo') // [[1, 1],[3, 3]]
 
 使用非常简单。
 ```sh
-npx fuite https://sugarat.top
+npx fuite https://devzx.top
 ```
 
 一会儿工夫就能得到一份报告。
