--- a/packages/blogpress/weekly/2023-09-17.md
+++ b/packages/blogpress/weekly/2023-09-17.md
@@ -101,7 +101,7 @@ Pagefind 是基于Rust实现的离线搜索库，支持零配置的接入网站
 
 ---
 
-篇幅有限，如果你还没看够，可移步后面的推荐渠道，继续游览，历史周刊（<20）[移步博客](https://sugarat.top/weekly/index.html)
+篇幅有限，如果你还没看够，可移步后面的推荐渠道，继续游览，历史周刊（<20）[移步博客](https://devzx.top/weekly/index.html)
 
 ## ⭐️强力推荐关注
 * [阮一峰: 科技爱好者周刊](https://www.ruanyifeng.com/blog/archives.html) - 记录每周值得分享的科技内容，周五发布
