--- a/packages/blogpress/weekly/2024-02-25.md
+++ b/packages/blogpress/weekly/2024-02-25.md
@@ -143,7 +143,7 @@ CSS 中曾经棘手的难题现在已经变得很简单了，方法也很多。
 
 ---
 
-篇幅有限，如果你还没看够，可移步后面的推荐渠道，继续游览，历史周刊（<20）[移步博客](https://sugarat.top/weekly/index.html)
+篇幅有限，如果你还没看够，可移步后面的推荐渠道，继续游览，历史周刊（<20）[移步博客](https://devzx.top/weekly/index.html)
 
 ## ⭐️强力推荐关注
 * [阮一峰: 科技爱好者周刊](https://www.ruanyifeng.com/blog/archives.html) - 记录每周值得分享的科技内容，周五发布
