--- a/packages/blogpress/weekly/2024-04-21.md
+++ b/packages/blogpress/weekly/2024-04-21.md
@@ -117,7 +117,7 @@ pnpm add github:user/repo#path:packages/foo
 
 ---
 
-篇幅有限，如果你还没看够，可移步后面的推荐渠道，继续游览，历史周刊（<20）[移步博客](https://sugarat.top/weekly/index.html)
+篇幅有限，如果你还没看够，可移步后面的推荐渠道，继续游览，历史周刊（<20）[移步博客](https://devzx.top/weekly/index.html)
 
 ## ⭐️强力推荐关注
 
