--- a/packages/blogpress/weekly/2024-05-26.md
+++ b/packages/blogpress/weekly/2024-05-26.md
@@ -138,7 +138,7 @@ data {
 
 ---
 
-篇幅有限，如果你还没看够，可移步后面的推荐渠道，继续游览，历史周刊（<20）[移步博客](https://sugarat.top/weekly/index.html)
+篇幅有限，如果你还没看够，可移步后面的推荐渠道，继续游览，历史周刊（<20）[移步博客](https://devzx.top/weekly/index.html)
 
 ## ⭐️强力推荐关注
 
