--- a/packages/blogpress/weekly/2024-06-23.md
+++ b/packages/blogpress/weekly/2024-06-23.md
@@ -151,7 +151,7 @@ ws -d dist --spa index.html --rewrite '/api/(.*) -> http://127.0.0.1:3000/$1'
 
 ---
 
-篇幅有限，如果你还没看够，可移步后面的推荐渠道，继续游览，历史周刊（<20）[移步博客](https://sugarat.top/weekly/index.html)
+篇幅有限，如果你还没看够，可移步后面的推荐渠道，继续游览，历史周刊（<20）[移步博客](https://devzx.top/weekly/index.html)
 
 ## ⭐️强力推荐关注
 
