--- a/packages/blogpress/weekly/2024-07-21.md
+++ b/packages/blogpress/weekly/2024-07-21.md
@@ -114,7 +114,7 @@ CloudFlare 提供了[安全的 polyfill.io 镜像服务](https://cdnjs.cloudflar
 
 ---
 
-篇幅有限，如果你还没看够，可移步后面的推荐渠道，继续游览，历史周刊（<20）[移步博客](https://sugarat.top/weekly/index.html)
+篇幅有限，如果你还没看够，可移步后面的推荐渠道，继续游览，历史周刊（<20）[移步博客](https://devzx.top/weekly/index.html)
 
 ## ⭐️强力推荐关注
 
